# DeepLearning_Assignments

./: .gitignore  Assignment_4.ipynb  Lab_Assignment_2_Submission.ipynb  requirements.txt  streamlit_app.py
Assignment_3/: .dockerignore  Dockerfile  README.md  download_datasets.py  main.py  part_a_detection.py  part_b_classification.py  part_c_pose.py  part_d_obb.py  pyproject.toml  requirements.deploy.txt  run_all.py
Assignment_3/datasets/detection/train/: labels.cache
Assignment_3/datasets/detection/valid/: labels.cache
Assignment_3/datasets/obb/: data.yaml
Assignment_3/datasets/obb/test/labels/: adit_mp4-1002_jpg.rf.5e4018e963af1251b3f7e6fd487c479e.txt  adit_mp4-1008_jpg.rf.e20ac34ac20c029e179d9c8bee45a078.txt  adit_mp4-1022_jpg.rf.8ec648b3f53103ded740458e94ae21f5.txt  adit_mp4-1028_jpg.rf.d9e26a9972e7a6815a2dff1bf35aca60.txt  adit_mp4-1035_jpg.rf.d42b43d55c46df6098b9bd71317b740d.txt  adit_mp4-1049_jpg.rf.ddd000b665e067666e7ae5095494e47d.txt  adit_mp4-1055_jpg.rf.4e71f77e044f69cafda40e7ac2a1bf46.txt  adit_mp4-106_jpg.rf.54478e3522d01b166b11fa24cebcfbf0.txt  adit_mp4-121_jpg.rf.ba7e73aafa3b5c2660df214bf667f9c5.txt  (+442 more)
Assignment_3/datasets/pose/: data.yaml
Assignment_3/deployment/: app.py
Assignment_3/deployment/templates/: index.html
Assignment_3/frontend/: index.html  package-lock.json  vite.config.ts
Assignment_3/frontend/src/: App.tsx
Assignment_3/frontend/src/api/: predict.ts
Assignment_3/frontend/src/components/: ImageUpload.tsx  ResultsPanel.tsx  TaskSelector.tsx
Assignment_3/frontend/src/types/: index.ts
Assignment_3/runs/detect/: args.yaml
(+3953 files in other folders)
